<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/appwidget_dark_bg"
              android:orientation="vertical"
              android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/medium_padding"
        android:layout_marginRight="@dimen/medium_padding"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_padding"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FABB63"/>

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/action_refresh"
            android:background="@drawable/appwidget_button_center"
            android:src="@drawable/ic_action_refresh"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <include layout="@layout/empty_view_container"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/widget_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/appwidget_button_left"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_action_arrow_left"/>

        <Button
            android:id="@+id/dayName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/appwidget_button_center"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/appwidget_button_right"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_action_arrow_right"/>
    </LinearLayout>
</LinearLayout>